<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="country_iso_code">Country ISO Code :</string>
    <string name="code">Code</string>
    <string name="city_name">City Name :</string>
    <string name="name">Name</string>
    <string name="get">Get</string>
    <string name="temperature">Temperature</string>
    <string name="current">Current :</string>
    <string name="minimum">Minimum :</string>
    <string name="maximum">Maximum :</string>
    <string name="Fields_cannot_be_empty">Fields cannot be empty</string>
</resources>